[package]
name = "libvm"
version = "0.1.0"
authors = ["Agustin Chiappe Berrini <jnieve@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
libconsensus = { git = "https://github.com/Fantom-foundation/libconsensus" }
serde = "1.0.91"
serde_derive = "1.0.91"
